# litedoc

./: .gitignore  Cargo.toml  LITEDOC_AST.md  LITEDOC_SPEC.md  Makefile  README.md  bench_results.md
.github/workflows/: ci.yml  release.yml
crates/litedoc-cli/: Cargo.toml  README.md
crates/litedoc-cli/src/: main.rs
crates/litedoc-core/: Cargo.toml
crates/litedoc-core/benches/: parse_benchmark.rs  robustness_benchmark.rs
crates/litedoc-core/src/: ast.rs  error.rs  inline.rs  lexer.rs  lib.rs  parser.rs  span.rs
crates/litedoc-core/tests/: parser_tests.rs  robustness_report.rs
crates/litedoc-py/: Cargo.toml  README.md  pyproject.toml
crates/litedoc-py/python/pyld/: __init__.py
crates/litedoc-py/src/: lib.rs
crates/litedoc-py/tests/: test_litedoc.py
examples/: agent_message.ld  agent_output.ld  gnarly.ld  gnarly.md  simple.ld  test.ld  token_test_ld.ld  token_test_md.md  tool_result.ld
