[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "litedoc-py"
version = "0.1.0"
description = "Deterministic document parser for AI agents and LLM output"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "nssalian" }]
keywords = ["parser", "document", "llm", "ai", "agent", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/nssalian/litedoc"
Repository = "https://github.com/nssalian/litedoc"
Documentation = "https://github.com/nssalian/litedoc#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pyld"
exclude = ["**/__pycache__", "**/*.pyc"]
